@@ -17,5 +17,6 @@ pam_script.la
 pam_script_la-pam_script.lo
 pam_script.lo
 pam-script.spec
+pam-script.7
 stamp-h1
 *.tar.gz
