@@ -1,4 +1,4 @@
 Primary Author:
-	Jeroen Nijhof <jnijhof@nijhofnet.nl>
+	Jeroen Nijhof <jeroen@jeroennijhof.nl>
 Other Authors and Major Contributors:
 	R.K. Owen, Ph.D. <rkowen@nersc.gov>
