@@ -1,7 +1,7 @@
 
 pam-script
 
-    Copyright (C) 2007-2009 Jeroen Nijhof <jnijhof@nijhofnet.nl>
+    Copyright (C) 2007-2009 Jeroen Nijhof <jeroen@jeroennijhof.nl>
     and R.K. Owen <rkowen@nersc.gov> for some parts.
 
     This program is free software; you can redistribute it and/or modify
